--- a/PlatziTweets/Modules/Welcome/Welcome.storyboard
+++ b/PlatziTweets/Modules/Welcome/Welcome.storyboard
@@ -54,6 +54,9 @@
                                         <state key="normal" title="Registro">
                                             <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         </state>
+                                        <connections>
+                                            <segue destination="DBO-OA-f8k" kind="show" id="7dB-gf-PVQ"/>
+                                        </connections>
                                     </button>
                                 </subviews>
                                 <color key="backgroundColor" white="0.0" alpha="0.30027290239726029" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -149,16 +152,61 @@
             </objects>
             <point key="canvasLocation" x="604" y="60.719640179910051"/>
         </scene>
-        <!--View Controller-->
+        <!--Registro-->
         <scene sceneID="tFy-y7-AC6">
             <objects>
                 <viewController id="DBO-OA-f8k" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="n1e-jM-pmN">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="5O5-aZ-VHf">
+                                <rect key="frame" x="20" y="111" width="335" height="182"/>
+                                <subviews>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Correo" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Srb-fa-Z6G">
+                                        <rect key="frame" x="0.0" y="0.0" width="335" height="34"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Nombre y Apellido" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="L9Z-DZ-WpS">
+                                        <rect key="frame" x="0.0" y="44" width="335" height="34"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="LOH-Wh-end">
+                                        <rect key="frame" x="0.0" y="88" width="335" height="34"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Erh-AT-VL1">
+                                        <rect key="frame" x="0.0" y="132" width="335" height="50"/>
+                                        <color key="backgroundColor" red="0.0" green="0.69019607839999997" blue="0.41960784309999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="50" id="677-QW-5v7"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                                        <state key="normal" title="Continuar">
+                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        </state>
+                                    </button>
+                                </subviews>
+                            </stackView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bottomImage" translatesAutoresizingMaskIntoConstraints="NO" id="OSa-7m-53r">
+                                <rect key="frame" x="0.0" y="544" width="375" height="123"/>
+                            </imageView>
+                        </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="OSa-7m-53r" firstAttribute="bottom" secondItem="ihP-lb-oxu" secondAttribute="bottom" id="4rJ-eK-t2y"/>
+                            <constraint firstItem="5O5-aZ-VHf" firstAttribute="leading" secondItem="ihP-lb-oxu" secondAttribute="leading" constant="20" id="IUu-cw-A1Y"/>
+                            <constraint firstItem="OSa-7m-53r" firstAttribute="trailing" secondItem="ihP-lb-oxu" secondAttribute="trailing" id="QZ5-JG-TDM"/>
+                            <constraint firstItem="5O5-aZ-VHf" firstAttribute="top" secondItem="ihP-lb-oxu" secondAttribute="top" constant="15" id="ThX-La-bbP"/>
+                            <constraint firstItem="OSa-7m-53r" firstAttribute="leading" secondItem="ihP-lb-oxu" secondAttribute="leading" id="lMa-j1-MJr"/>
+                            <constraint firstItem="ihP-lb-oxu" firstAttribute="trailing" secondItem="5O5-aZ-VHf" secondAttribute="trailing" constant="20" id="wvD-u5-AhJ"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="ihP-lb-oxu"/>
                     </view>
+                    <navigationItem key="navigationItem" title="Registro" id="LCI-h5-C3f"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="zMK-Aw-J7I" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
